# i18n-google-sync

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: plan.md
src/: config.rs  main.rs
src/auth/: mod.rs  oauth.rs
src/files/: mod.rs  parser.rs  writer.rs
src/sheets/: manager.rs  mod.rs  translate.rs
src/sync/: add_keys.rs  full_sync.rs  mod.rs  sync_back.rs
src/utils/: errors.rs  mod.rs
