[package]
name = "i18n_google_sync"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/webmobix/i18n-google-sync"

[dependencies]
# Google Sheets API and OAuth
google-sheets4 = "6.0"
yup-oauth2 = "11.0"
hyper = "1.0"
hyper-rustls = { version = "0.27", features = ["ring"] }
hyper-util = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Browser launching for auth
webbrowser = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# File system operations
walkdir = "2.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# TLS/crypto provider for rustls
rustls = { version = "0.23", features = ["ring"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
